[gd_scene load_steps=13 format=3 uid="uid://b8jrtk1lv0oo0"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_a6eex"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ProblemSelection/problem_list.gd" id="2_ycbub"]
[ext_resource type="Texture2D" uid="uid://b4w0nb2kv1et0" path="res://Textures/UI/Information/InfoTabFocus.png" id="3_1icyh"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="3_tav84"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="4_sya5g"]
[ext_resource type="Texture2D" uid="uid://1qi6lr05g0vt" path="res://Textures/Buttons/icons/add.png" id="5_6tky2"]
[ext_resource type="Texture2D" uid="uid://c3nrennubqoow" path="res://Textures/Buttons/icons/back.png" id="5_6vt8q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1o4m4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vce7l"]
texture = ExtResource("3_1icyh")
texture_margin_left = 7.0
texture_margin_top = 4.0
texture_margin_right = 7.0
texture_margin_bottom = 3.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_roie3"]
resource_local_to_scene = true
shader = ExtResource("4_sya5g")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vw46e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iwm7s"]
resource_local_to_scene = true
shader = ExtResource("4_sya5g")

[node name="ProblemList" type="PanelContainer"]
material = ExtResource("1_a6eex")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -365.0
offset_bottom = -263.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1o4m4")
script = ExtResource("2_ycbub")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = -4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
z_index = 1
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 1
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = SubResource("StyleBoxTexture_vce7l")
text = "Problem Set"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="Back" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_tav84")]
material = SubResource("ShaderMaterial_roie3")
layout_mode = 2
icon = ExtResource("5_6vt8q")
minimum_size = Vector2(30, 21)
icon_use_parent_material = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_vw46e")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ProblemContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="AddProblem" parent="VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer" instance=ExtResource("3_tav84")]
material = SubResource("ShaderMaterial_iwm7s")
layout_mode = 2
size_flags_horizontal = 1
icon = ExtResource("5_6tky2")
minimum_size = Vector2(2.08165e-12, 28)
icon_use_parent_material = true
action_mode = 1

[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/AddProblem" to="." method="_on_add_problem_pressed"]
